[REFACT] #258 : 노트 미리보기 조회 성능 수정 (트리방식 -> 원하는 필드 스트리밍 방식)